# Data_Science

./: LogisticRegression.ipynb  ML\NaiveBayes.ipynb
DL/: ANN_classification.ipynb  ANN_regression.ipynb  DigitRecognizer.ipynb  Heart_disease.ipynb  Intrusion__system.ipynb  Pneumonia_Detection.ipynb  VGG19.ipynb  object_detection.py  object_detection_2.py
DL/FACE_DETECTION_OPENCV/: face_detection.py
DL/FACE_DETECTION_OPENCV/config/: frame_drawing.py  frame_editing.py
ML/: Boosting_algos.ipynb  DecisionTree_2.ipynb  Hyperparameter_tuning.ipynb  IPL.ipynb  KNN.ipynb  Lasso_Ridge.ipynb  LinearRegression.ipynb  LogisticRegression.ipynb  Mobile_price_prediction.ipynb  NaiveBayes.ipynb  sentiment_analysis_ML.ipynb
ML/IPL_APP_PREDICTOR/: app.py  model_train.py
ML/sentiment_analysis_test/: app.py  pyproject.toml  sentiment_analysis.db  test.py
ML/sentiment_analysis_test/analysis/: sentiment.py  text_processing.py  topics.py
ML/sentiment_analysis_test/database/: db_operations.py
ML/sentiment_analysis_test/visualization/: charts.py  wordcloud.py
NLP/: Recommendation_system.ipynb  Sentiment_Analysis.ipynb
