[tool.poetry]
name = "sentiment-analysis-test"
version = "0.1.0"
description = ""
authors = ["AT200210 <amaythakur09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.28.0"
pandas = ">=2.1.0"
numpy = ">=1.26.0"
nltk = ">=3.8.1"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
pillow = ">=10.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.2"
wordcloud = ">=1.9.2"
scikit-learn = ">=1.3.0"
tensorflow-cpu = ">=2.14.0"
gensim = ">=4.3.2"
scipy = ">=1.11.3"
pyLDAvis = ">=3.4.1"
yake = ">=0.4.8"
transformers = ">=4.35.0"
plotly = ">=5.18.0"
protobuf = ">=4.24.4"
torch = ">=2.1.0"
torchvision = ">=0.16.0"
pydantic = ">=2.4.2"
fastapi = ">=0.104.1"
uvicorn = ">=0.23.2"
sumy = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
